--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,20 +10,32 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
-  flutter_svg: ^2.0.10
   fl_chart: ^0.68.0
-  provider: ^6.1.2
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
-  firebase_storage: ^11.6.5
   firebase_messaging: ^14.7.15
   pie_chart: ^5.4.0
+  flutter_launcher_icons: ^0.13.1
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+  web:
+    generate: true
+    image_path: "assets/logo.png"
+  windows:
+    generate: true
+    image_path: "assets/logo.png"
+
 flutter:
   uses-material-design: true
+  assets:
+  - assets/
