--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,3 +45,7 @@ android {
 flutter {
     source = "../.."
 }
+
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
