--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,12 @@ dependencies:
   firebase_messaging: ^14.7.15
   pie_chart: ^5.4.0
   flutter_launcher_icons: ^0.13.1
+  flutter_pdfview: ^1.3.0
+  pdf: ^3.7.0
+  printing: ^5.9.0
+  intl: ^0.17.0
+  path_provider: ^2.0.11
+  share_plus: ^6.3.0
   
 
 dev_dependencies:
